--- a/app/src/main/res/layout/activity_simon.xml
+++ b/app/src/main/res/layout/activity_simon.xml
@@ -8,12 +8,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.javier.simon_says.Simon"
-    android:padding="60dp">
+    android:padding="60dp"
+    android:background="@color/background">
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/tableLayout1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <TableRow
             android:id="@+id/tableRow1"
@@ -58,5 +59,16 @@
         </TableRow>
 
     </TableLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_alignParentStart="false"
+        android:layout_marginStart="174dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/center_button"
+        android:text="1"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
