--- a/app/src/main/res/layout/activity_simon.xml
+++ b/app/src/main/res/layout/activity_simon.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.javier.simon_says.Simon"
-    android:background="@color/background">
+    android:background="@drawable/simon_background_2">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -23,10 +23,10 @@
         android:id="@+id/tableLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="90dp"
-        android:paddingBottom="90dp"
-        android:paddingLeft="45dp"
-        android:paddingRight="45dp">
+        android:layout_centerInParent="true"
+        android:layout_margin="55dp"
+        android:paddingTop="60dp"
+        android:paddingBottom="60dp">
 
         <TableRow
             android:id="@+id/tableRow1"
@@ -85,14 +85,15 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:background="@color/center_space"
-        android:textSize="35dp" />
+        android:textSize="45dp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:id="@+id/linearLayout">
 
         <ImageView
             android:layout_width="60dp"
