--- a/app/src/main/res/drawable/button1.xml
+++ b/app/src/main/res/drawable/button1.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+
+    <item android:state_pressed="false">
+        <shape android:shape="rectangle"  >
+            <corners android:topLeftRadius="60dp"/>
+            <gradient android:angle="-90" android:startColor="@color/colorbutton1" android:endColor="@color/colorbutton1" />
+        </shape>
+    </item>
+
+
+
+    <item android:state_pressed="true">
         <shape android:shape="rectangle"  >
             <corners android:topLeftRadius="60dp" />
             <gradient android:angle="-90" android:startColor="@color/colorpressedbutton1" android:endColor="@color/colorpressedbutton1" />
         </shape>
     </item>
+
 </selector>
