--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="PopupMessage">
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
 </resources>
