--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,9 @@
     <color name="colorpressedbutton3">#8bd3fb</color>
     <color name="colorpressedbutton4">#b8d000</color>
     <color name="color4siclebutton">#f37bad</color>
+    <color name="color4siclebuttonpressed">#f595bd</color>
     <color name="acecreambutton">#89E894</color>
+    <color name="acecreambuttonpressed">#7bd085</color>
     <color name="center_space">#77370b</color>
     <color name="black_overlay">#66000000</color>
 </resources>
