--- a/app/src/main/res/layout/activity_chooser.xml
+++ b/app/src/main/res/layout/activity_chooser.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp"
     android:background="@color/background">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:id="@+id/relativeLayout"
+        android:background="@drawable/toldo"
+        android:layout_alignParentTop="true">
+
+    </RelativeLayout>
+
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp">
+        android:id="@+id/linearLayout3"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_alignStart="@+id/linearLayout2">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView5"
+            android:src="@drawable/icecreamlogo" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/app_name"
             android:id="@+id/textView"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="@color/center_space"
-            android:textColor="#ffffff"
-            android:textAlignment="center"
-            android:textSize="45dp"
-            android:layout_weight="1.0" />
+            android:gravity="left|center_vertical"
+            android:textColor="@color/center_space"
+            android:textSize="50dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -31,43 +43,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="15dp"
-        android:paddingBottom="15dp">
+        android:paddingBottom="15dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/linearLayout2">
 
-        <Button
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="4SICLE"
-            android:id="@+id/textView2"
-            android:layout_gravity="center"
-            android:textSize="30dp"
-            android:textColor="#ffffff"
-            android:layout_weight="1.0"
-            android:background="@drawable/sicle_button"
-            android:textAlignment="center"
-            android:onClick="sipopCall" />
-    </LinearLayout>
+            android:padding="15dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="4SICLE"
+                android:id="@+id/textView2"
+                android:textSize="30dp"
+                android:textColor="#ffffff"
+                android:layout_weight="1.0"
+                android:background="@drawable/sicle_button"
+                android:textAlignment="center"
+                android:onClick="sipopCall" />
 
-        <Button
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="ACE CREAM"
-            android:id="@+id/textView3"
-            android:layout_gravity="center"
-            android:textSize="30dp"
-            android:textColor="#ffffff"
-            android:layout_weight="1.0"
-            android:background="@drawable/acecreambutton"
-            android:textAlignment="center" />
+            android:padding="15dp">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="ACE CREAM"
+                android:id="@+id/textView3"
+                android:layout_gravity="center"
+                android:textSize="30dp"
+                android:textColor="#ffffff"
+                android:layout_weight="1.0"
+                android:background="@drawable/acecreambutton"
+                android:textAlignment="center" />
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
