--- a/app/src/main/res/layout/activity_chooser.xml
+++ b/app/src/main/res/layout/activity_chooser.xml
@@ -25,7 +25,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/imageView5"
-            android:src="@drawable/icecreamlogo" />
+            android:src="@mipmap/icecreamlogo" />
 
         <TextView
             android:layout_width="match_parent"
@@ -88,7 +88,8 @@
                 android:textColor="#ffffff"
                 android:layout_weight="1.0"
                 android:background="@drawable/acecreambutton"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:onClick="aceCall" />
         </LinearLayout>
 
     </LinearLayout>
