--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imageView4"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/icecreamlogo"
+        android:src="@mipmap/icecreamlogo"
         android:background="#000000" />
 
     <TextView
@@ -17,10 +17,9 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:id="@+id/textView6"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
         android:textColor="#ffffff"
         android:textAlignment="center"
-        android:textSize="35dp" />
+        android:textSize="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
