--- a/app/src/main/res/layout/activity_ace.xml
+++ b/app/src/main/res/layout/activity_ace.xml
@@ -162,7 +162,7 @@
         <Button
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:id="@+id/button"
+            android:id="@+id/btnmrkace"
             android:layout_alignParentRight="true"
             android:textAlignment="center"
             android:textColor="#ffffff"
