--- a/app/src/main/res/layout-hdpi/activity_chooser.xml
+++ b/app/src/main/res/layout-hdpi/activity_chooser.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout3"
         android:layout_below="@+id/relativeLayout"
-        android:layout_alignStart="@+id/linearLayout2">
+        android:layout_alignStart="@+id/linearLayout2"
+        android:layout_alignLeft="@id/linearLayout2">
 
         <ImageView
             android:layout_width="80dp"
@@ -46,9 +47,10 @@
         android:paddingBottom="15dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:id="@+id/linearLayout2"
-        android:layout_below="@+id/linearLayout3"
-        android:layout_alignParentStart="true">
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/linearLayout2">
 
         <LinearLayout
             android:orientation="vertical"
@@ -100,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
         android:paddingLeft="15dp"
         android:paddingBottom="15dp">
 
