--- a/app/src/main/res/layout-hdpi/activity_info.xml
+++ b/app/src/main/res/layout-hdpi/activity_info.xml
@@ -18,7 +18,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -27,7 +28,8 @@
                 android:text="Autores:"
                 android:id="@+id/textView7"
                 android:textSize="35dp"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:textAlignment="center" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -38,17 +40,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Javier Romero Sánchez:"
+                    android:text="@string/javier"
                     android:id="@+id/textView8"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textAlignment="center" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="https://github.com/Javrom95"
+                    android:text="@string/javgit"
                     android:id="@+id/textView9"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textAlignment="center" />
             </LinearLayout>
 
             <LinearLayout
@@ -60,17 +64,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Matías Ramírez:"
+                    android:text="@string/matias"
                     android:id="@+id/textView10"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textAlignment="center" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="https://github.com/matirc"
+                    android:text="@string/matgit"
                     android:id="@+id/textView11"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:textAlignment="center" />
             </LinearLayout>
 
         </LinearLayout>
