--- a/app/src/main/res/layout-hdpi/activity_simon.xml
+++ b/app/src/main/res/layout-hdpi/activity_simon.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1"
-        android:layout_alignParentStart="false">
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false">
 
     </LinearLayout>
 
@@ -24,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:layout_margin="55dp"
+        android:layout_margin="60dp"
         android:paddingTop="60dp"
         android:paddingBottom="60dp">
 
