--- a/app/src/main/res/layout-hdpi/splash.xml
+++ b/app/src/main/res/layout-hdpi/splash.xml
@@ -14,7 +14,7 @@
         android:background="#000000" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:id="@+id/textView6"
@@ -22,5 +22,5 @@
         android:textAlignment="center"
         android:textSize="35dp"
         android:layout_below="@+id/imageView4"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
