--- a/app/src/main/res/layout-mdpi/actitivy_message.xml
+++ b/app/src/main/res/layout-mdpi/actitivy_message.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+This file is part of Icemon Says
+Icemon Says is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,10 +28,11 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BRING IT ON!"
+            android:text="OK"
             android:id="@+id/button9"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentLeft="true"
             android:textColor="#ffffff"
             android:background="#E57373"
             android:onClick="bringItOn" />
@@ -23,10 +40,11 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NEXT TIME."
+            android:text="NO"
             android:id="@+id/button6"
             android:layout_alignTop="@+id/button9"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:background="#E57373"
             android:textColor="#ffffff"
             android:onClick="nextTime" />
