--- a/app/src/main/res/layout-mdpi/activity_ace.xml
+++ b/app/src/main/res/layout-mdpi/activity_ace.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+This file is part of Icemon Says
+Icemon Says is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,7 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1"
-        android:layout_alignParentStart="false">
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="true">
 
     </LinearLayout>
 
@@ -24,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:layout_margin="80dp"
+        android:layout_margin="100dp"
         android:paddingTop="60dp"
         android:paddingBottom="60dp">
 
@@ -140,22 +157,22 @@
             android:id="@+id/linearLayout">
 
             <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/imageView"
-                android:background="@mipmap/popsicle" />
+                android:background="@drawable/popsicle" />
 
             <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/imageView2"
-                android:background="@mipmap/popsicle" />
+                android:background="@drawable/popsicle" />
 
             <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/imageView3"
-                android:background="@mipmap/popsicle" />
+                android:background="@drawable/popsicle" />
 
         </LinearLayout>
 
