--- a/app/src/main/res/layout-mdpi/activity_simon.xml
+++ b/app/src/main/res/layout-mdpi/activity_simon.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1"
-        android:layout_alignParentStart="false">
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false">
 
     </LinearLayout>
 
@@ -24,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:layout_margin="55dp"
+        android:layout_margin="125dp"
         android:paddingTop="60dp"
         android:paddingBottom="60dp">
 
@@ -90,28 +91,28 @@
             android:id="@+id/linearLayout">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/imageView"
-                android:background="@mipmap/popsicle" />
+                android:background="@drawable/popsicle" />
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/imageView2"
-                android:background="@mipmap/popsicle" />
+                android:background="@drawable/popsicle" />
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/imageView3"
-                android:background="@mipmap/popsicle" />
+                android:background="@drawable/popsicle" />
 
         </LinearLayout>
 
         <Button
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:id="@+id/button"
             android:layout_alignParentRight="true"
             android:textAlignment="center"
