--- a/app/src/main/res/layout-mdpi/splash.xml
+++ b/app/src/main/res/layout-mdpi/splash.xml
@@ -5,8 +5,8 @@
     android:background="#000000">
 
     <ImageView
-        android:layout_width="400dp"
-        android:layout_height="300dp"
+        android:layout_width="500dp"
+        android:layout_height="600dp"
         android:id="@+id/imageView4"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -14,13 +14,13 @@
         android:background="#000000" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:id="@+id/textView6"
         android:textColor="#ffffff"
         android:textAlignment="center"
-        android:textSize="35dp"
+        android:textSize="60dp"
         android:layout_below="@+id/imageView4"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
