--- a/app/src/main/res/layout-xhdpi/splash.xml
+++ b/app/src/main/res/layout-xhdpi/splash.xml
@@ -5,23 +5,21 @@
     android:background="#000000">
 
     <ImageView
-        android:layout_width="600dp"
-        android:layout_height="700dp"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
         android:id="@+id/imageView4"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/icecreamlogo"
         android:background="#000000" />
-
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:id="@+id/textView6"
         android:textColor="#ffffff"
         android:textAlignment="center"
-        android:textSize="50dp"
-        android:textIsSelectable="false"
+        android:textSize="40dp"
         android:layout_below="@+id/imageView4"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
