--- a/app/src/main/res/layout-xxxhdpi/activity_chooser.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_chooser.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout3"
         android:layout_below="@+id/relativeLayout"
-        android:layout_alignStart="@+id/linearLayout2">
+        android:layout_alignStart="@+id/linearLayout2"
+        android:layout_alignLeft="@id/linearLayout2">
 
         <ImageView
             android:layout_width="100dp"
@@ -35,7 +36,7 @@
             android:id="@+id/textView"
             android:gravity="left|center_vertical"
             android:textColor="@color/center_space"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -48,8 +49,8 @@
         android:paddingRight="15dp"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:id="@+id/linearLayout2">
-
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -100,6 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
         android:paddingLeft="15dp"
         android:paddingBottom="15dp">
 
